--- a/Q&A/Q&A/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +14,13 @@
         <!--Q&A-->
         <scene sceneID="Suf-E9-PLf">
             <objects>
-                <tableViewController id="Fn7-ZO-fVx" sceneMemberID="viewController">
+                <tableViewController id="Fn7-ZO-fVx" customClass="QuestionsTableViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="S95-R7-mT2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="120" id="od7-9t-q22">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="120" id="od7-9t-q22" customClass="QuestionTableViewCell" customModule="Q_A" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="od7-9t-q22" id="ai4-rH-f44">
@@ -82,6 +83,12 @@
                                         <constraint firstItem="sDm-mh-y7G" firstAttribute="top" secondItem="ai4-rH-f44" secondAttribute="topMargin" constant="8" id="iR5-kf-PJS"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="answerLabel" destination="Yvo-HU-UIz" id="rnA-Dn-bGw"/>
+                                    <outlet property="askerLabel" destination="SQK-lF-ir4" id="pYX-X4-5En"/>
+                                    <outlet property="questionLabel" destination="R6r-ek-GRF" id="gVz-V3-NKD"/>
+                                    <segue destination="ToL-c2-gzi" kind="show" identifier="answerSegue" id="Cnj-eL-xqy"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -90,12 +97,130 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Q&amp;A" id="GUp-o8-Vdb">
-                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="7SW-zf-yTA"/>
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="7SW-zf-yTA">
+                            <connections>
+                                <segue destination="x0F-tN-xPY" kind="show" identifier="askSegue" id="3Se-vF-B6x"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g1G-Hf-V7s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="944.79999999999995" y="123.68815592203899"/>
+        </scene>
+        <!--Answer-->
+        <scene sceneID="uKX-O0-1Kc">
+            <objects>
+                <viewController id="ToL-c2-gzi" customClass="AnswerViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3z0-6V-otX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oLc-Pz-m1g">
+                                <rect key="frame" x="8" y="124" width="359" height="275.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question that is asked?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHQ-XE-Umi">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="23"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who asked" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6W-ea-6aS">
+                                        <rect key="frame" x="0.0" y="31" width="359" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KOu-zf-5bJ">
+                                        <rect key="frame" x="0.0" y="59.5" width="359" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6Ta-Kb-ElS">
+                                        <rect key="frame" x="0.0" y="97.5" width="359" height="178"/>
+                                        <color key="backgroundColor" red="0.46409996170000001" green="0.67634795979999995" blue="0.65338242570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oLc-Pz-m1g" firstAttribute="leading" secondItem="aVb-xe-9us" secondAttribute="leading" constant="8" id="BcB-fW-fwn"/>
+                            <constraint firstItem="oLc-Pz-m1g" firstAttribute="height" secondItem="aVb-xe-9us" secondAttribute="height" multiplier="1/2" id="TLw-1s-bTU"/>
+                            <constraint firstItem="oLc-Pz-m1g" firstAttribute="top" secondItem="aVb-xe-9us" secondAttribute="top" constant="8" id="csf-Bx-Isx"/>
+                            <constraint firstItem="aVb-xe-9us" firstAttribute="trailing" secondItem="oLc-Pz-m1g" secondAttribute="trailing" constant="8" id="vx7-fP-Pzb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="aVb-xe-9us"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Answer" id="E1z-fD-6eJ">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Answer" id="Rha-RJ-JVq">
+                            <connections>
+                                <action selector="submitAnswerTapped:" destination="ToL-c2-gzi" id="b0q-Bc-sl7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="answerTextView" destination="6Ta-Kb-ElS" id="8jx-vj-YX6"/>
+                        <outlet property="answererTextField" destination="KOu-zf-5bJ" id="M2w-bv-kOJ"/>
+                        <outlet property="askerLabel" destination="p6W-ea-6aS" id="W66-4y-CrQ"/>
+                        <outlet property="questionLabel" destination="bHQ-XE-Umi" id="9yE-Jz-zlN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oPZ-z0-YF8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1721" y="483"/>
+        </scene>
+        <!--Ask Question-->
+        <scene sceneID="zlh-vR-Rc5">
+            <objects>
+                <viewController id="x0F-tN-xPY" customClass="AskQuestionViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L4o-BZ-rFu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hc0-wW-WRQ">
+                                <rect key="frame" x="8" y="124" width="359" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KVJ-8c-u9I">
+                                <rect key="frame" x="8" y="162" width="359" height="183.5"/>
+                                <color key="backgroundColor" red="1" green="0.83981702850839746" blue="0.80219367050822932" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RFi-hu-bkX" firstAttribute="trailing" secondItem="hc0-wW-WRQ" secondAttribute="trailing" constant="8" id="OxI-ak-fs8"/>
+                            <constraint firstItem="KVJ-8c-u9I" firstAttribute="top" secondItem="hc0-wW-WRQ" secondAttribute="bottom" constant="8" id="Q33-ME-QIT"/>
+                            <constraint firstItem="KVJ-8c-u9I" firstAttribute="height" secondItem="RFi-hu-bkX" secondAttribute="height" multiplier="1/3" id="e7W-OR-nRb"/>
+                            <constraint firstItem="hc0-wW-WRQ" firstAttribute="top" secondItem="RFi-hu-bkX" secondAttribute="top" constant="8" id="kxc-PZ-3r2"/>
+                            <constraint firstItem="KVJ-8c-u9I" firstAttribute="leading" secondItem="RFi-hu-bkX" secondAttribute="leading" constant="8" id="lXW-2p-RM9"/>
+                            <constraint firstItem="hc0-wW-WRQ" firstAttribute="leading" secondItem="RFi-hu-bkX" secondAttribute="leading" constant="8" id="pgq-H1-MDV"/>
+                            <constraint firstItem="RFi-hu-bkX" firstAttribute="trailing" secondItem="KVJ-8c-u9I" secondAttribute="trailing" constant="8" id="qkw-WH-Osy"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RFi-hu-bkX"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Ask Question" id="XLd-GT-5p7">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="8of-3Q-Fdu">
+                            <connections>
+                                <action selector="submitQuestionTapped:" destination="x0F-tN-xPY" id="bcf-vA-C2K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameField" destination="hc0-wW-WRQ" id="zyE-Eg-jNb"/>
+                        <outlet property="questionField" destination="KVJ-8c-u9I" id="Ci5-td-Xc4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLN-Uh-TJo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1722" y="-189"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6Gl-pj-TeG">
